logs/microtm.log
2018-12-16 20:25:50,656 ERROR: Exception on / [POST] [in c:\python\tm_final-master\venv\lib\site-packages\flask\app.py:1761]
Traceback (most recent call last):
  File "c:\python\tm_final-master\venv\lib\site-packages\flask\app.py", line 2292, in wsgi_app
    response = self.full_dispatch_request()
  File "c:\python\tm_final-master\venv\lib\site-packages\flask\app.py", line 1815, in full_dispatch_request
    rv = self.handle_user_exception(e)
  File "c:\python\tm_final-master\venv\lib\site-packages\flask\app.py", line 1718, in handle_user_exception
    reraise(exc_type, exc_value, tb)
  File "c:\python\tm_final-master\venv\lib\site-packages\flask\_compat.py", line 35, in reraise
    raise value
  File "c:\python\tm_final-master\venv\lib\site-packages\flask\app.py", line 1813, in full_dispatch_request
    rv = self.dispatch_request()
  File "c:\python\tm_final-master\venv\lib\site-packages\flask\app.py", line 1799, in dispatch_request
    return self.view_functions[rule.endpoint](**req.view_args)
  File "C:\python\TM_final-master\app\main\routes.py", line 36, in index
    success_message, druh = upload.upload(f)
  File "C:\python\TM_final-master\app\main\upload.py", line 43, in upload
    transitions = literal_eval(transitions_u),
  File "c:\users\mario\appdata\local\programs\python\python36\Lib\ast.py", line 48, in literal_eval
    node_or_string = parse(node_or_string, mode='eval')
  File "c:\users\mario\appdata\local\programs\python\python36\Lib\ast.py", line 35, in parse
    return compile(source, filename, mode, PyCF_ONLY_AST)
  File "<unknown>", line 1
    {'q0':
         ^
SyntaxError: unexpected EOF while parsing
2018-12-16 21:05:36,065 INFO: Microtm startup [in C:\python\TM_final-master\app\__init__.py:46]
2018-12-16 22:37:46,429 ERROR: Exception on /simulacia/<name>/<druh>/<vstup> [POST] [in c:\python\tm_final-master\venv\lib\site-packages\flask\app.py:1761]
Traceback (most recent call last):
  File "c:\python\tm_final-master\venv\lib\site-packages\flask\app.py", line 2292, in wsgi_app
    response = self.full_dispatch_request()
  File "c:\python\tm_final-master\venv\lib\site-packages\flask\app.py", line 1815, in full_dispatch_request
    rv = self.handle_user_exception(e)
  File "c:\python\tm_final-master\venv\lib\site-packages\flask\app.py", line 1718, in handle_user_exception
    reraise(exc_type, exc_value, tb)
  File "c:\python\tm_final-master\venv\lib\site-packages\flask\_compat.py", line 35, in reraise
    raise value
  File "c:\python\tm_final-master\venv\lib\site-packages\flask\app.py", line 1813, in full_dispatch_request
    rv = self.dispatch_request()
  File "c:\python\tm_final-master\venv\lib\site-packages\flask\app.py", line 1799, in dispatch_request
    return self.view_functions[rule.endpoint](**req.view_args)
  File "C:\python\TM_final-master\app\main\routes.py", line 229, in simulacia
    df,list_of_table,stroj, list_of_tape, length, cycle, final ,cross ,cross_number = table.xntm_table_none_final(name,vstup,final)
  File "C:\python\TM_final-master\table\table.py", line 923, in xntm_table_none_final
    for s,t,c,tape_symbol, current_state,tapes,directions,final, cycle, cross, crossnumber in generator:
  File "C:\python\TM_final-master\turing_machine\xntm.py", line 872, in _validate_input_yield_none_final
    final, cycle, cross, crossnumber = self._validate_input_yieldd_none_final(input_str,zoznam)
  File "C:\python\TM_final-master\turing_machine\xntm.py", line 667, in _validate_input_yieldd_none_final
    tapes[i] = TMTape(self.left_end, blank_symbol=self.blank_symbol)
TypeError: list indices must be integers or slices, not TMTape
2018-12-16 22:39:23,552 INFO: Microtm startup [in C:\python\TM_final-master\app\__init__.py:46]
2018-12-16 22:39:30,722 ERROR: Exception on /simulacia/<name>/<druh>/<vstup> [POST] [in c:\python\tm_final-master\venv\lib\site-packages\flask\app.py:1761]
Traceback (most recent call last):
  File "c:\python\tm_final-master\venv\lib\site-packages\flask\app.py", line 2292, in wsgi_app
    response = self.full_dispatch_request()
  File "c:\python\tm_final-master\venv\lib\site-packages\flask\app.py", line 1815, in full_dispatch_request
    rv = self.handle_user_exception(e)
  File "c:\python\tm_final-master\venv\lib\site-packages\flask\app.py", line 1718, in handle_user_exception
    reraise(exc_type, exc_value, tb)
  File "c:\python\tm_final-master\venv\lib\site-packages\flask\_compat.py", line 35, in reraise
    raise value
  File "c:\python\tm_final-master\venv\lib\site-packages\flask\app.py", line 1813, in full_dispatch_request
    rv = self.dispatch_request()
  File "c:\python\tm_final-master\venv\lib\site-packages\flask\app.py", line 1799, in dispatch_request
    return self.view_functions[rule.endpoint](**req.view_args)
  File "C:\python\TM_final-master\app\main\routes.py", line 229, in simulacia
    df,list_of_table,stroj, list_of_tape, length, cycle, final ,cross ,cross_number = table.xntm_table_none_final(name,vstup,final)
  File "C:\python\TM_final-master\table\table.py", line 923, in xntm_table_none_final
    for s,t,c,tape_symbol, current_state,tapes,directions,final, cycle, cross, crossnumber in generator:
  File "C:\python\TM_final-master\turing_machine\xntm.py", line 873, in _validate_input_yield_none_final
    final, cycle, cross, crossnumber = self._validate_input_yieldd_none_final(input_str,zoznam)
  File "C:\python\TM_final-master\turing_machine\xntm.py", line 668, in _validate_input_yieldd_none_final
    tapes[i] = TMTape(self.left_end, blank_symbol=self.blank_symbol)
TypeError: list indices must be integers or slices, not TMTape
2018-12-17 00:17:04,191 INFO: Microtm startup [in C:\python\TM_final-master\app\__init__.py:46]
2018-12-17 02:19:59,293 INFO: Microtm startup [in C:\python\TM_final-master\app\__init__.py:46]
2018-12-17 02:37:35,158 INFO: Microtm startup [in C:\python\TM_final-master\app\__init__.py:46]
2018-12-17 02:58:43,150 INFO: Microtm startup [in C:\python\fffff\app\__init__.py:46]
2018-12-17 03:00:38,562 ERROR: Exception on / [POST] [in c:\python\fffff\venv\lib\site-packages\flask\app.py:1761]
Traceback (most recent call last):
  File "c:\python\fffff\venv\lib\site-packages\flask\app.py", line 2292, in wsgi_app
    response = self.full_dispatch_request()
  File "c:\python\fffff\venv\lib\site-packages\flask\app.py", line 1815, in full_dispatch_request
    rv = self.handle_user_exception(e)
  File "c:\python\fffff\venv\lib\site-packages\flask\app.py", line 1718, in handle_user_exception
    reraise(exc_type, exc_value, tb)
  File "c:\python\fffff\venv\lib\site-packages\flask\_compat.py", line 35, in reraise
    raise value
  File "c:\python\fffff\venv\lib\site-packages\flask\app.py", line 1813, in full_dispatch_request
    rv = self.dispatch_request()
  File "c:\python\fffff\venv\lib\site-packages\flask\app.py", line 1799, in dispatch_request
    return self.view_functions[rule.endpoint](**req.view_args)
  File "C:\python\fffff\app\main\routes.py", line 31, in index
    name = form.opts.data.id
AttributeError: 'NoneType' object has no attribute 'id'
